feat: 优化怪物攻击动画